добавлено интро и шапка

--- a/index.html
+++ b/index.html
@@ -15,14 +15,60 @@
       <!-- HEADER -->
       <heder class="header">
         <div class="container-header">
-            <hr class="header-hr">
           <div class="header-inner">
-            <nav class="navside">
-              
+            <a class="logo" href="#intro">
+              <img src="assets/img/logo.svg" alt="logo">
+            </a>
+            <nav class="navside">      
+              <a href="#intro" class="nav-link active"><div class="square-nav"></div>
+                ГЛАВНАЯ</a>
+              <a href="#" class="nav-link"><div class="square-nav"></div>БЕСПЛАТНЫЙ ПОДБОР КВАРТИРЫ</a>
+              <a href="#" class="nav-link"><div class="square-nav"></div>ПРЕИМУЩЕСТВА СОТРУДНИЧЕСТВА</a>
+              <a href="#" class="nav-link"><div class="square-nav"></div>КВАРТИРЫ В РЕГИОНАХ</a>
+              <a href="#" class="nav-link"><div class="square-nav"></div>ОТЗЫВЫ</a>
+              <a href="#" class="nav-link"><div class="square-nav"></div>КОНТАКТЫ</a>
             </nav>
+            <address class="header-address">
+              <a href="#" class="header-tel">+7(XXX)XXX-XX-XX</a>
+              <p class="header-address-info">ежедневно с 9:00 до 22:00</p>
+            </address>
           </div>
         </div>
       </heder>
+
+      <main class="main">
+        <!-- INTRO -->
+        <div class="intro" id="intro">
+          <div class="container">
+            <div class="intro-inner">
+              <img src="assets/img/intro.jpg" class="intro-img" alt="">
+              <h3 class="intro-descriptor">Эксперт в сфере недвижимости<br>
+                ИП Шельпяков Александр Николаевич</h3>
+              <div class="intro-info">
+               <h1 class="intro-title">
+                Бесплатный подбор<br> 
+                квартир и апартаментов<br> 
+                от застройщиков в Москве<br> 
+                и Московской области
+               </h1>
+               <a href="#" class="btn">УЗНАТЬ БОЛЬШЕ</a>
+              </div>
+            </div>
+          </div>
+        </div> <!-- /.intro-->
+
+        <!-- SELECTION -->
+        <div class="selection">
+          <section class="section">
+            <div class="container">
+              <div class="container-inner">
+                <h2 class="selection-title">Квартира в новостройке с бесплатным<br> 
+                  подбором -  не миф, а реальность </h2>
+              </div>
+            </div>
+          </section>
+        </div>
+      </main>
     </div>
 </body>
 </html>
