добавлен блок подбора

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <nav class="navside">      
               <a href="#intro" class="nav-link active"><div class="square-nav"></div>
                 ГЛАВНАЯ</a>
-              <a href="#" class="nav-link"><div class="square-nav"></div>БЕСПЛАТНЫЙ ПОДБОР КВАРТИРЫ</a>
+              <a href="#selection" class="nav-link"><div class="square-nav"></div>БЕСПЛАТНЫЙ ПОДБОР КВАРТИРЫ</a>
               <a href="#" class="nav-link"><div class="square-nav"></div>ПРЕИМУЩЕСТВА СОТРУДНИЧЕСТВА</a>
               <a href="#" class="nav-link"><div class="square-nav"></div>КВАРТИРЫ В РЕГИОНАХ</a>
               <a href="#" class="nav-link"><div class="square-nav"></div>ОТЗЫВЫ</a>
@@ -58,12 +58,58 @@
         </div> <!-- /.intro-->
 
         <!-- SELECTION -->
-        <div class="selection">
+        <div class="selection" id="selection">
           <section class="section">
             <div class="container">
               <div class="container-inner">
                 <h2 class="selection-title">Квартира в новостройке с бесплатным<br> 
                   подбором -  не миф, а реальность </h2>
+                <div class="selection-info">
+                  <img src="assets/img/house.jpg" class="selection-img" alt="">
+                  <div class="selection-info-text">
+                    <p>Покупка новой квартиры - ответственное
+                      решение, влекущее за собой вереницу вопросов,
+                      разобраться в которых самостоятельно
+                      бывает непросто:</p>
+                      <ul class="selection-list">
+                        <li class="selection-point">  как правильно выбирать застройщика?
+                        </li>
+                        <li class="selection-point">  какие материалы используются при строительстве дома?</li>
+                        <li class="selection-point">  что делать, если банк не одобрит ипотеку?
+                        </li>
+                      </ul>
+                  </div> <!-- /.selection-info-text-->
+                </div>
+                <div class="selection-info-doing">
+                  <p>Я ценю время своих клиентов, поэтому беру на себя:</p>
+                  <div class="selection-info-doing-poins">
+                    <p>Подбор квартиры,<br> 
+                      отвечающей всем<br> 
+                      вашим требованиям</p>
+                      <hr>
+                    <p>Показ<br> 
+                      лучших<br>
+                      вариантов</p>
+                      <hr>
+                    <p>Помощь<br> 
+                      с оформлением<br> 
+                      ипотеки</p>
+                      <hr>
+                    <p>Подготовку<br> 
+                      необходимых<br>
+                      документов</p>
+                      <hr>
+                    <p>Cодействие в решении<br>
+                      возникающих<br> 
+                      вопросов</p>
+                  </div>
+                </div>
+                <div class="selection-btn">
+                  <a href="#" class="btn">БЕСПЛАТНАЯ КОНСУЛЬТАЦИЯ</a>
+                  <p class="selection-btn-info">При покупке квартиры от застройщика<br> 
+                    мои услуги будут для вас бесплатны.*<br>
+                    Сохраните ваши деньги на ремонт!</p>
+                </div>
               </div>
             </div>
           </section>
