добавлен блок с городами

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 ГЛАВНАЯ</a>
               <a href="#selection" class="nav-link"><div class="square-nav"></div>БЕСПЛАТНЫЙ ПОДБОР КВАРТИРЫ</a>
               <a href="#benefits" class="nav-link"><div class="square-nav"></div>ПРЕИМУЩЕСТВА СОТРУДНИЧЕСТВА</a>
-              <a href="#" class="nav-link"><div class="square-nav"></div>КВАРТИРЫ В РЕГИОНАХ</a>
-              <a href="#" class="nav-link"><div class="square-nav"></div>ОТЗЫВЫ</a>
+              <a href="#flats" class="nav-link"><div class="square-nav"></div>КВАРТИРЫ В РЕГИОНАХ</a>
+              <a href="#reviews" class="nav-link"><div class="square-nav"></div>ОТЗЫВЫ</a>
               <a href="#" class="nav-link"><div class="square-nav"></div>КОНТАКТЫ</a>
             </nav>
             <address class="header-address">
@@ -120,7 +120,7 @@
         <section class="section">
           <div class="container">
           <div class="container-inner">
-          <h2 class="benefits-title">ПОЧЕМУ МНЕ ДОВЕРЯЮТ?</h2>
+          <h2 class="benefits-title">Почему мне доверяют?</h2>
       <div class="benefits-table">
         <p class="benefits-text">За меня все скажут факты</p>
           <ul class="benefits-list">
@@ -193,11 +193,60 @@
               </li>
           </ul>
       </div> <!-- /.benefits__table -->
-      </div>
-  </section>
-  <!-- /.benefits -->
+      </section>
+      </div> <!-- /.benefits -->
 
-  
+      <!-- Flats -->
+      <div class="flats" id="flats">
+        <section class="section">
+          <div class="container">
+            <div class="container-inner">
+              <h2 class="flats-title">Бесплатный подбор квартир в регионах</h2>
+              <p class="flats-text">Я работаю с ведущими застройщиками Российской Федерации:</p>
+              <div class="flats-list">
+              <ul class="flats-list-col">
+               <li class="flats-list-item"> Москва</li>
+               <li class="flats-list-item"> Санкт-Петербург</li>
+               <li class="flats-list-item"> Владивосток</li>
+               <li class="flats-list-item"> Владимир</li>
+               <li class="flats-list-item"> Воронеж</li>
+               <li class="flats-list-item"> Екатеринбург</li>
+               <li class="flats-list-item"> Ижевск</li>
+               <li class="flats-list-item"> Казань</li>
+               <li class="flats-list-item"> Калининград</li>
+               <li class="flats-list-item"> Киров</li>
+               <li class="flats-list-item"> Краснодар</li>
+              </ul>
+              <ul class="flats-list-col">
+                <li class="flats-list-item"> Крым</li>
+                <li class="flats-list-item"> Липецк</li>
+                <li class="flats-list-item"> Нижний Новгород</li>
+                <li class="flats-list-item"> Новосибрск</li>
+                <li class="flats-list-item"> Пенза</li>
+                <li class="flats-list-item"> Пермь</li>
+                <li class="flats-list-item"> Ростов-на-Дону</li>
+                <li class="flats-list-item"> Самара</li>
+                <li class="flats-list-item"> Уфа</li>
+                <li class="flats-list-item"> Челябинск</li>
+                <li class="flats-list-item"> Черноморское побережье</li>
+               </ul>
+              </div>
+              <p class="flats-text">Купить квартиру со мной - легко!</p>
+            </div>
+          </div>
+        </section>
+      </div>
+
+      <!-- Reviews -->
+      <div class="reviews" id="reviews">
+        <section class="section">
+          <div class="container">
+            <div class="container-inner">
+
+            </div>
+          </div>
+        </section>
+      </div>
       </main>
     </div>
 </body>
