добавлена основа адаптива

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <a href="#benefits" class="nav-link"><div class="square-nav"></div>ПРЕИМУЩЕСТВА СОТРУДНИЧЕСТВА</a>
               <a href="#flats" class="nav-link"><div class="square-nav"></div>КВАРТИРЫ В РЕГИОНАХ</a>
               <a href="#reviews" class="nav-link"><div class="square-nav"></div>ОТЗЫВЫ</a>
-              <a href="#" class="nav-link"><div class="square-nav"></div>КОНТАКТЫ</a>
+              <a href="#contacts" class="nav-link"><div class="square-nav"></div>КОНТАКТЫ</a>
             </nav>
             <address class="header-address">
               <a href="#" class="header-tel">+7(XXX)XXX-XX-XX</a>
@@ -51,7 +51,7 @@
                 от застройщиков в Москве<br> 
                 и Московской области
                </h1>
-               <a href="#" class="btn">УЗНАТЬ БОЛЬШЕ</a>
+               <a href="#selection" class="btn">УЗНАТЬ БОЛЬШЕ</a>
               </div>
             </div>
           </div>
@@ -242,12 +242,153 @@
         <section class="section">
           <div class="container">
             <div class="container-inner">
+              <h2 class="reviews-title">Отзывы довольных клиентов</h2>
+              <div class="reviews-slider">
+                <div class="reviews-slider-list">
+                  <div class="reviews-slide-item" id="rev1">
+                    <div class="rev">
+                      <div class="rev-square"></div>
+                      <div class="rev-header">
+                          <img class="ava" src="assets/img/rev1.jpg" alt="">
+                          <div class="name-star">
+                              <h4>Наталья</h4>
+                              <div class="stars">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                              </div> <!-- /.stars -->
+                          </div> <!-- /.name-star-->
+                          <time>24.03.2021</time>
+                      </div><!-- /.rev-header -->
+                      <article>
+                          <p>Как-то так сложилось, что наши планы по&nbsp;покупке
+                             квартиры совпали с&nbsp;пандемией. По&nbsp;началу решили
+                             с мужем повременить, но&nbsp;коллега посоветовал
+                             обратиться к&nbsp;Александру, поскольку сам с&nbsp;ним
+                             когда-то сотрудничал. Изучив сайт, мы решили
+                             с&nbsp;Александром связаться...</p>
+                      </article>
+  
+                      <div class="rev-footer">
+                          <a class="rev-link" href="https://yandex.ru/maps/org/ip_shelpyakov_aleksandr_nikolayevich/21280559911/reviews/?ll=37.380031%2C55.815892&z=7">Читать далее</a>
+                      </div>    
+                    </div>
 
+                    <div class="rev">
+                      <div class="rev-square"></div>
+                      <div class="rev-header">
+                          <img class="ava" src="assets/img/rev2.png" alt="">
+                          <div class="name-star">
+                              <h4>alex k.</h4>
+                              <div class="stars">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                              </div> <!-- /.stars -->
+                          </div> <!-- /.name-star-->
+                          <time>14.03.2021</time>
+                      </div><!-- /.rev-header -->
+                      <article>
+                          <p>Приобрел квартиру через Александр Николаевича. 
+                            Очень рекомендую - честный 
+                            и компетентный специалист, 
+                            предложил массу вариантов, из которых было что выбрать.
+                            В целях собственного спокойствия также обратился 
+                            к нему за юридическими 
+                            услугами при сопровождении сделки...</p>
+                      </article>
+  
+                      <div class="rev-footer">
+                          <a class="rev-link" href="https://yandex.ru/maps/org/ip_shelpyakov_aleksandr_nikolayevich/21280559911/reviews/?ll=37.380031%2C55.815892&z=7">Читать далее</a>
+                      </div>    
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+              <div class="reviews-controls">
+                <a class="revs-arrow-left" onclick="previousSlide()" id="revs-arr-lf">
+                  <img src="assets/img/arr-left.png" alt="стрелка">
+                </a>
+                <ul class="reviews-slider-dots">
+                  <li class="dot dot-active"></li>
+                  <li class="dot"></li>
+                </ul>
+                <a class="revs-arrow-right" onclick="nextSlide()" id="revs-arr-rt">
+                  <img src="assets/img/arr-right.png" alt="стрелка">
+                </a>
+              </div>
             </div>
           </div>
         </section>
       </div>
+
+      <!-- Contacts -->
+      <div class="contacts" id="contacts">
+        <section class="section section-contacts">
+          <div class="container">
+          <div class="container-inner">
+          <div class="contacts-info">
+            <div class="contacts-info-text">
+              <h2 class="contacts-title">Контакты</h2>
+              <p class="contacts-text">Вы можете связаться со мной любым<br> 
+                нижеуказанным способом </p>
+              <address class="contacts-address">
+                <img src="assets/img/icon/tel.png" alt="">
+                <a href="tel:" class="telefon">+7(XXX)-XXX-XX-XX</a>
+              </address>
+
+              <div class="contacts-icons">
+                <a href="">
+                  <img class="contacts-icon" src="assets/img/icon/whatsapp.png" alt="">
+                </a>
+                <a href="">
+                  <img class="contacts-icon" src="assets/img/icon/telegram.png" alt="">
+                </a>
+                <a href="">
+                  <img class="contacts-icon" src="assets/img/icon/viber.png" alt="">
+                </a>
+              </div>
+
+              <p class="contacts-text">Я на связи ежедневно с 9:00 до 22:00</p>
+            </div> <!-- /.contacts-info-text-->
+            <img src="assets/img/contacts.jpg" class="contacts-img" alt="">
+          </div> <!-- /.contacts-info-->
+          </div>
+          </div>
+        </section>
+      </div>
       </main>
+
+      <footer class="footer">
+        <div class="container">
+          <div class="footer-inner">
+            <div class="footer-copy">
+              <p>&copy; 2020-2023<br>   
+              Индивидуальный Предприниматель<br>
+              Шельпяков Александр Николаевич<br>
+              ОГРНИП XXXXXXXXXXXX<br>
+              ИНН XXXXXXXXXX<br>
+              </p>
+          </div>
+          <div class="footer-info">
+            <p class="footer-info-text">* - за подробностями обращаться по телефону:<br>
+              <a href="">+7(XXX)XXX-XX-XX</a></p>
+              <p class="footer-author">
+                Изображения и иконки, использованные<br> 
+                на сайте, взяты с <a href="https://www.freepik.com">freepik.com</a> и 
+                <a href="https://www.flaticon.com/">
+                    flaticon.com
+                </a>
+            </p>
+          </div>
+          </div>
+        </div>
+      </footer>
     </div>
 </body>
 </html>
