исправлен баг, создающий горизонтальный скролл

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="page">
       <!-- HEADER -->
-      <heder class="header">
+      <header class="header">
         <div class="container-header">
           <div class="header-inner">
             <a class="logo" href="#intro">
@@ -34,14 +34,15 @@
             </address>
           </div>
         </div>
-      </heder>
-
+      </header>
+      
       <main class="main">
         <!-- INTRO -->
         <div class="intro" id="intro">
+          <section class="section">
           <div class="container">
+            <img src="assets/img/intro.jpg" class="intro-img" alt="">
             <div class="intro-inner">
-              <img src="assets/img/intro.jpg" class="intro-img" alt="">
               <h3 class="intro-descriptor">Эксперт в сфере недвижимости<br>
                 ИП Шельпяков Александр Николаевич</h3>
               <div class="intro-info">
@@ -55,6 +56,7 @@
               </div>
             </div>
           </div>
+          </section>
         </div> <!-- /.intro-->
 
         <!-- SELECTION -->
@@ -367,6 +369,7 @@
       <footer class="footer">
         <div class="container">
           <div class="footer-inner">
+            <div class="footer-inner-info">
             <div class="footer-copy">
               <p>&copy; 2020-2023<br>   
               Индивидуальный Предприниматель<br>
@@ -387,8 +390,10 @@
             </p>
           </div>
           </div>
+          </div>
         </div>
       </footer>
-    </div>
+      
+    </div> <!-- /.page -->
 </body>
 </html>
