добавлена вся версия для пк

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                   <div class="selection-info-text">
                     <p>Покупка новой квартиры - ответственное
                       решение, влекущее за собой вереницу вопросов,
-                      разобраться в которых самостоятельно
+                      разобраться<br> в которых самостоятельно
                       бывает непросто:</p>
                       <ul class="selection-list">
                         <li class="selection-point">  как правильно выбирать застройщика?
