--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
               <a href="#" class="header-tel">+7(XXX)XXX-XX-XX</a>
               <p class="header-address-info">ежедневно с 9:00 до 22:00</p>
             </address>
+            <input type="checkbox" class="burger" id="navTog">
+            <label for="navTog">
+              <div></div>
+              <div></div>
+              <div></div>
+            </label>
           </div>
         </div>
       </header>
@@ -42,6 +48,10 @@
           <section class="section">
           <div class="container">
             <img src="assets/img/intro.jpg" class="intro-img" alt="">
+            <img src="assets/img/intro-mob.jpg" class="intro-img-mob" alt="">
+            <a class="intro-logo" href="#intro">
+              <img src="assets/img/logo.svg" alt="logo">
+            </a>
             <div class="intro-inner">
               <h3 class="intro-descriptor">Эксперт в сфере недвижимости<br>
                 ИП Шельпяков Александр Николаевич</h3>
@@ -139,7 +149,7 @@
               <li class="benefits-list-item">
                   <img class="benefits-list-icon" src="assets/img/icon/2.png" alt="">
                   <h5 class="benefits-list-title">Прямые договоры <br>
-                      с застройщиками</h5>
+                      с&nbsp;застройщиками</h5>
                   <p class="benefits-list-text">
                       Я работаю только с надежными<br> 
                       застройщиками, что позволяет <br>
@@ -310,6 +320,38 @@
                     </div>
 
                   </div>
+                  <div class="reviews-slide-item-mob" id="revMob1">
+                    <div class="rev">
+                      <div class="rev-square"></div>
+                      <div class="rev-header">
+                          <img class="ava" src="assets/img/rev1.jpg" alt="">
+                          <div class="name-star">
+                              <h4>Наталья</h4>
+                              <div class="stars">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                              </div> <!-- /.stars -->
+                          </div> <!-- /.name-star-->
+                          <time>24.03.2021</time>
+                      </div><!-- /.rev-header -->
+                      <article>
+                          <p>Как-то так сложилось, что наши планы по&nbsp;покупке
+                             квартиры совпали с&nbsp;пандемией. По&nbsp;началу решили
+                             с мужем повременить, но&nbsp;коллега посоветовал
+                             обратиться к&nbsp;Александру, поскольку сам с&nbsp;ним
+                             когда-то сотрудничал. Изучив сайт, мы решили
+                             с&nbsp;Александром связаться...</p>
+                      </article>
+  
+                      <div class="rev-footer">
+                          <a class="rev-link" href="https://yandex.ru/maps/org/ip_shelpyakov_aleksandr_nikolayevich/21280559911/reviews/?ll=37.380031%2C55.815892&z=7">Читать далее</a>
+                      </div>    
+                    </div>
+
+                  </div>
                 </div>
               </div>
               <div class="reviews-controls">
@@ -319,6 +361,7 @@
                 <ul class="reviews-slider-dots">
                   <li class="dot dot-active"></li>
                   <li class="dot"></li>
+                  <li class="dot dot-mob"></li>
                 </ul>
                 <a class="revs-arrow-right" onclick="nextSlide()" id="revs-arr-rt">
                   <img src="assets/img/arr-right.png" alt="стрелка">
