--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Arsenal:wght@400;700&display=swap" rel="stylesheet">
+<link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
     <title>Бесплатный подбор</title>
 </head>
 <body>
     <div class="page">
       <!-- HEADER -->
-      <header class="header">
+      <header class="header" id="header">
         <div class="container-header">
           <div class="header-inner">
-            <a class="logo" href="#intro">
+            <a class="logo" href="#intro" id="logo">
               <img src="assets/img/logo.svg" alt="logo">
             </a>
             <nav class="navside">      
@@ -33,7 +34,7 @@
               <p class="header-address-info">ежедневно с 9:00 до 22:00</p>
             </address>
             <input type="checkbox" class="burger" id="navTog">
-            <label for="navTog">
+            <label for="navTog" id="burger">
               <div></div>
               <div></div>
               <div></div>
@@ -74,26 +75,26 @@
           <section class="section">
             <div class="container">
               <div class="container-inner">
-                <h2 class="selection-title">Квартира в новостройке с бесплатным<br> 
-                  подбором -  не миф, а реальность </h2>
+                <h2 class="selection-title">Квартира в новостройке с&nbsp;бесплатным<br> 
+                  подбором -  не миф, а&nbsp;реальность </h2>
                 <div class="selection-info">
                   <img src="assets/img/house.jpg" class="selection-img" alt="">
                   <div class="selection-info-text">
-                    <p>Покупка новой квартиры - ответственное
-                      решение, влекущее за собой вереницу вопросов,
-                      разобраться<br> в которых самостоятельно
+                    <p>Покупка новой квартиры -&nbsp;ответственное
+                      решение, влекущее за&nbsp;собой вереницу вопросов,
+                      разобраться<br> в&nbsp;которых самостоятельно
                       бывает непросто:</p>
                       <ul class="selection-list">
                         <li class="selection-point">  как правильно выбирать застройщика?
                         </li>
-                        <li class="selection-point">  какие материалы используются при строительстве дома?</li>
+                        <li class="selection-point">  какие материалы используются при&nbsp;строительстве дома?</li>
                         <li class="selection-point">  что делать, если банк не одобрит ипотеку?
                         </li>
                       </ul>
                   </div> <!-- /.selection-info-text-->
                 </div>
                 <div class="selection-info-doing">
-                  <p>Я ценю время своих клиентов, поэтому беру на себя:</p>
+                  <p>Я ценю время своих клиентов, поэтому беру на&nbsp;себя:</p>
                   <div class="selection-info-doing-poins">
                     <p>Подбор квартиры,<br> 
                       отвечающей всем<br> 
@@ -104,14 +105,14 @@
                       вариантов</p>
                       <hr>
                     <p>Помощь<br> 
-                      с оформлением<br> 
+                      с&nbsp;оформлением<br> 
                       ипотеки</p>
                       <hr>
                     <p>Подготовку<br> 
                       необходимых<br>
                       документов</p>
                       <hr>
-                    <p>Cодействие в решении<br>
+                    <p>Cодействие в&nbsp;решении<br>
                       возникающих<br> 
                       вопросов</p>
                   </div>
@@ -213,7 +214,7 @@
         <section class="section">
           <div class="container">
             <div class="container-inner">
-              <h2 class="flats-title">Бесплатный подбор квартир в регионах</h2>
+              <h2 class="flats-title">Бесплатный подбор квартир в&nbsp;регионах</h2>
               <p class="flats-text">Я работаю с ведущими застройщиками Российской Федерации:</p>
               <div class="flats-list">
               <ul class="flats-list-col">
@@ -261,6 +262,35 @@
                     <div class="rev">
                       <div class="rev-square"></div>
                       <div class="rev-header">
+                          <img class="ava" src="assets/img/rev3.jpg" alt="">
+                          <div class="name-star">
+                              <h4>Анжела С</h4>
+                              <div class="stars">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                              </div> <!-- /.stars -->
+                          </div> <!-- /.name-star-->
+                          <time>15.06.2021</time>
+                      </div><!-- /.rev-header -->
+                      <article>
+                          <p>Как же я рада, что обратилась именно к&nbsp;Александру! 
+                            Так случилось, что мне попался недобросовестный 
+                            работодатель, который не хотел платить за&nbsp;мою работу.
+                            Александр помог с&nbsp;заявлением в Трудовую Инспекцию, 
+                            каждый шаг консультировал и&nbsp;поддерживал...</p>
+                      </article>
+  
+                      <div class="rev-footer">
+                          <a class="rev-link" href="https://uslugi.yandex.ru/profile/IpShelpyakovAleksandrNikolaevich-1096504">Читать далее</a>
+                      </div>    
+                    </div>
+
+                    <div class="rev">
+                      <div class="rev-square"></div>
+                      <div class="rev-header">
                           <img class="ava" src="assets/img/rev1.jpg" alt="">
                           <div class="name-star">
                               <h4>Наталья</h4>
@@ -287,7 +317,108 @@
                           <a class="rev-link" href="https://yandex.ru/maps/org/ip_shelpyakov_aleksandr_nikolayevich/21280559911/reviews/?ll=37.380031%2C55.815892&z=7">Читать далее</a>
                       </div>    
                     </div>
+                  </div>
 
+                  <div class="reviews-slide-item" id="rev2">
+                    <div class="rev">
+                      <div class="rev-square"></div>
+                      <div class="rev-header">
+                          <img class="ava" src="assets/img/rev2.png" alt="">
+                          <div class="name-star">
+                              <h4>alex k.</h4>
+                              <div class="stars">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                              </div> <!-- /.stars -->
+                          </div> <!-- /.name-star-->
+                          <time>14.03.2021</time>
+                      </div><!-- /.rev-header -->
+                      <article>
+                          <p>Приобрел квартиру через Александр Николаевича. 
+                            Очень рекомендую - честный 
+                            и компетентный специалист, 
+                            предложил массу вариантов, из которых было что выбрать.
+                            В целях собственного спокойствия также обратился 
+                            к нему за юридическими 
+                            услугами при сопровождении сделки...</p>
+                      </article>
+  
+                      <div class="rev-footer">
+                          <a class="rev-link" href="https://yandex.ru/maps/org/ip_shelpyakov_aleksandr_nikolayevich/21280559911/reviews/?ll=37.380031%2C55.815892&z=7">Читать далее</a>
+                      </div>    
+                    </div>
+                    </div>
+
+                  </div>
+                  <div class="reviews-slide-item-mob" id="revMob1">
+                    <div class="rev">
+                      <div class="rev-square"></div>
+                      <div class="rev-header">
+                          <img class="ava" src="assets/img/rev3.jpg" alt="">
+                          <div class="name-star">
+                              <h4>Анжела С</h4>
+                              <div class="stars">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                              </div> <!-- /.stars -->
+                          </div> <!-- /.name-star-->
+                          <time>15.06.2021</time>
+                      </div><!-- /.rev-header -->
+                      <article>
+                          <p>Как же я рада, что обратилась именно к&nbsp;Александру! 
+                            Так случилось, что мне попался недобросовестный 
+                            работодатель, который не хотел платить за&nbsp;мою работу.
+                            Александр помог с&nbsp;заявлением в Трудовую Инспекцию, 
+                            каждый шаг консультировал и&nbsp;поддерживал...</p>
+                      </article>
+  
+                      <div class="rev-footer">
+                          <a class="rev-link" href="https://uslugi.yandex.ru/profile/IpShelpyakovAleksandrNikolaevich-1096504">Читать далее</a>
+                      </div>    
+                    </div>
+
+                  </div>
+                  <div class="reviews-slide-item-mob" id="revMob2">
+                    <div class="rev">
+                      <div class="rev-square"></div>
+                      <div class="rev-header">
+                          <img class="ava" src="assets/img/rev1.jpg" alt="">
+                          <div class="name-star">
+                              <h4>Наталья</h4>
+                              <div class="stars">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                                  <img src="assets/img/star.png" alt="">
+                              </div> <!-- /.stars -->
+                          </div> <!-- /.name-star-->
+                          <time>24.03.2021</time>
+                      </div><!-- /.rev-header -->
+                      <article>
+                          <p>Как-то так сложилось, что наши планы по&nbsp;покупке
+                             квартиры совпали с&nbsp;пандемией. По&nbsp;началу решили
+                             с мужем повременить, но&nbsp;коллега посоветовал
+                             обратиться к&nbsp;Александру, поскольку сам с&nbsp;ним
+                             когда-то сотрудничал. Изучив сайт, мы решили
+                             с&nbsp;Александром связаться...</p>
+                      </article>
+  
+                      <div class="rev-footer">
+                          <a class="rev-link" href="https://yandex.ru/maps/org/ip_shelpyakov_aleksandr_nikolayevich/21280559911/reviews/?ll=37.380031%2C55.815892&z=7">Читать далее</a>
+                      </div>    
+                    </div>
+                  </div>
+
+
+                  
+                  <div class="reviews-slide-item-mob" id="revMob3">
                     <div class="rev">
                       <div class="rev-square"></div>
                       <div class="rev-header">
@@ -320,53 +451,22 @@
                     </div>
 
                   </div>
-                  <div class="reviews-slide-item-mob" id="revMob1">
-                    <div class="rev">
-                      <div class="rev-square"></div>
-                      <div class="rev-header">
-                          <img class="ava" src="assets/img/rev1.jpg" alt="">
-                          <div class="name-star">
-                              <h4>Наталья</h4>
-                              <div class="stars">
-                                  <img src="assets/img/star.png" alt="">
-                                  <img src="assets/img/star.png" alt="">
-                                  <img src="assets/img/star.png" alt="">
-                                  <img src="assets/img/star.png" alt="">
-                                  <img src="assets/img/star.png" alt="">
-                              </div> <!-- /.stars -->
-                          </div> <!-- /.name-star-->
-                          <time>24.03.2021</time>
-                      </div><!-- /.rev-header -->
-                      <article>
-                          <p>Как-то так сложилось, что наши планы по&nbsp;покупке
-                             квартиры совпали с&nbsp;пандемией. По&nbsp;началу решили
-                             с мужем повременить, но&nbsp;коллега посоветовал
-                             обратиться к&nbsp;Александру, поскольку сам с&nbsp;ним
-                             когда-то сотрудничал. Изучив сайт, мы решили
-                             с&nbsp;Александром связаться...</p>
-                      </article>
-  
-                      <div class="rev-footer">
-                          <a class="rev-link" href="https://yandex.ru/maps/org/ip_shelpyakov_aleksandr_nikolayevich/21280559911/reviews/?ll=37.380031%2C55.815892&z=7">Читать далее</a>
-                      </div>    
-                    </div>
-
-                  </div>
                 </div>
-              </div>
+
               <div class="reviews-controls">
                 <a class="revs-arrow-left" onclick="previousSlide()" id="revs-arr-lf">
                   <img src="assets/img/arr-left.png" alt="стрелка">
                 </a>
                 <ul class="reviews-slider-dots">
-                  <li class="dot dot-active"></li>
-                  <li class="dot"></li>
+                  <li class="dot dot-square dot-active"></li>
+                  <li class="dot dot-square"></li>
                   <li class="dot dot-mob"></li>
                 </ul>
                 <a class="revs-arrow-right" onclick="nextSlide()" id="revs-arr-rt">
                   <img src="assets/img/arr-right.png" alt="стрелка">
                 </a>
               </div>
+            </div>
             </div>
           </div>
         </section>
@@ -423,7 +523,7 @@
           </div>
           <div class="footer-info">
             <p class="footer-info-text">* - за подробностями обращаться по телефону:<br>
-              <a href="">+7(XXX)XXX-XX-XX</a></p>
+              <a href="tel:">+7(XXX)XXX-XX-XX</a></p>
               <p class="footer-author">
                 Изображения и иконки, использованные<br> 
                 на сайте, взяты с <a href="https://www.freepik.com">freepik.com</a> и 
@@ -438,5 +538,8 @@
       </footer>
       
     </div> <!-- /.page -->
+
+    <script src="assets/js/burger.js"></script>
+    <script src="assets/js/sliderRev.js"></script> 
 </body>
 </html>
