--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       
       <main class="main">
         <!-- INTRO -->
-        <div class="intro" id="intro">
+        <div class="intro scroll" id="intro">
           <section class="section">
           <div class="container">
             <img src="assets/img/intro.jpg" class="intro-img" alt="">
@@ -71,7 +71,7 @@
         </div> <!-- /.intro-->
 
         <!-- SELECTION -->
-        <div class="selection" id="selection">
+        <div class="selection scroll" id="selection">
           <section class="section">
             <div class="container">
               <div class="container-inner">
@@ -118,7 +118,7 @@
                   </div>
                 </div>
                 <div class="selection-btn">
-                  <a href="#" class="btn">БЕСПЛАТНАЯ КОНСУЛЬТАЦИЯ</a>
+                  <a href="#contacts" class="btn">БЕСПЛАТНАЯ КОНСУЛЬТАЦИЯ</a>
                   <p class="selection-btn-info">При покупке квартиры от застройщика<br> 
                     мои услуги будут для вас бесплатны.*<br>
                     Сохраните ваши деньги на ремонт!</p>
@@ -129,7 +129,7 @@
         </div> <!-- /.selection -->
 
         <!-- Benefits -->
-        <div class="benefits" id="benefits">
+        <div class="benefits scroll" id="benefits">
         <section class="section">
           <div class="container">
           <div class="container-inner">
@@ -210,7 +210,7 @@
       </div> <!-- /.benefits -->
 
       <!-- Flats -->
-      <div class="flats" id="flats">
+      <div class="flats scroll" id="flats">
         <section class="section">
           <div class="container">
             <div class="container-inner">
@@ -251,7 +251,7 @@
       </div>
 
       <!-- Reviews -->
-      <div class="reviews" id="reviews">
+      <div class="reviews scroll" id="reviews">
         <section class="section">
           <div class="container">
             <div class="container-inner">
@@ -288,106 +288,11 @@
                       </div>    
                     </div>
 
-                    <div class="rev">
-                      <div class="rev-square"></div>
-                      <div class="rev-header">
-                          <img class="ava" src="assets/img/rev1.jpg" alt="">
-                          <div class="name-star">
-                              <h4>Наталья</h4>
-                              <div class="stars">
-                                  <img src="assets/img/star.png" alt="">
-                                  <img src="assets/img/star.png" alt="">
-                                  <img src="assets/img/star.png" alt="">
-                                  <img src="assets/img/star.png" alt="">
-                                  <img src="assets/img/star.png" alt="">
-                              </div> <!-- /.stars -->
-                          </div> <!-- /.name-star-->
-                          <time>24.03.2021</time>
-                      </div><!-- /.rev-header -->
-                      <article>
-                          <p>Как-то так сложилось, что наши планы по&nbsp;покупке
-                             квартиры совпали с&nbsp;пандемией. По&nbsp;началу решили
-                             с мужем повременить, но&nbsp;коллега посоветовал
-                             обратиться к&nbsp;Александру, поскольку сам с&nbsp;ним
-                             когда-то сотрудничал. Изучив сайт, мы решили
-                             с&nbsp;Александром связаться...</p>
-                      </article>
-  
-                      <div class="rev-footer">
-                          <a class="rev-link" href="https://yandex.ru/maps/org/ip_shelpyakov_aleksandr_nikolayevich/21280559911/reviews/?ll=37.380031%2C55.815892&z=7">Читать далее</a>
-                      </div>    
-                    </div>
                   </div>
-
                   <div class="reviews-slide-item" id="rev2">
                     <div class="rev">
                       <div class="rev-square"></div>
                       <div class="rev-header">
-                          <img class="ava" src="assets/img/rev2.png" alt="">
-                          <div class="name-star">
-                              <h4>alex k.</h4>
-                              <div class="stars">
-                                  <img src="assets/img/star.png" alt="">
-                                  <img src="assets/img/star.png" alt="">
-                                  <img src="assets/img/star.png" alt="">
-                                  <img src="assets/img/star.png" alt="">
-                                  <img src="assets/img/star.png" alt="">
-                              </div> <!-- /.stars -->
-                          </div> <!-- /.name-star-->
-                          <time>14.03.2021</time>
-                      </div><!-- /.rev-header -->
-                      <article>
-                          <p>Приобрел квартиру через Александр Николаевича. 
-                            Очень рекомендую - честный 
-                            и компетентный специалист, 
-                            предложил массу вариантов, из которых было что выбрать.
-                            В целях собственного спокойствия также обратился 
-                            к нему за юридическими 
-                            услугами при сопровождении сделки...</p>
-                      </article>
-  
-                      <div class="rev-footer">
-                          <a class="rev-link" href="https://yandex.ru/maps/org/ip_shelpyakov_aleksandr_nikolayevich/21280559911/reviews/?ll=37.380031%2C55.815892&z=7">Читать далее</a>
-                      </div>    
-                    </div>
-                    </div>
-
-                  </div>
-                  <div class="reviews-slide-item-mob" id="revMob1">
-                    <div class="rev">
-                      <div class="rev-square"></div>
-                      <div class="rev-header">
-                          <img class="ava" src="assets/img/rev3.jpg" alt="">
-                          <div class="name-star">
-                              <h4>Анжела С</h4>
-                              <div class="stars">
-                                  <img src="assets/img/star.png" alt="">
-                                  <img src="assets/img/star.png" alt="">
-                                  <img src="assets/img/star.png" alt="">
-                                  <img src="assets/img/star.png" alt="">
-                                  <img src="assets/img/star.png" alt="">
-                              </div> <!-- /.stars -->
-                          </div> <!-- /.name-star-->
-                          <time>15.06.2021</time>
-                      </div><!-- /.rev-header -->
-                      <article>
-                          <p>Как же я рада, что обратилась именно к&nbsp;Александру! 
-                            Так случилось, что мне попался недобросовестный 
-                            работодатель, который не хотел платить за&nbsp;мою работу.
-                            Александр помог с&nbsp;заявлением в Трудовую Инспекцию, 
-                            каждый шаг консультировал и&nbsp;поддерживал...</p>
-                      </article>
-  
-                      <div class="rev-footer">
-                          <a class="rev-link" href="https://uslugi.yandex.ru/profile/IpShelpyakovAleksandrNikolaevich-1096504">Читать далее</a>
-                      </div>    
-                    </div>
-
-                  </div>
-                  <div class="reviews-slide-item-mob" id="revMob2">
-                    <div class="rev">
-                      <div class="rev-square"></div>
-                      <div class="rev-header">
                           <img class="ava" src="assets/img/rev1.jpg" alt="">
                           <div class="name-star">
                               <h4>Наталья</h4>
@@ -415,10 +320,8 @@
                       </div>    
                     </div>
                   </div>
-
-
                   
-                  <div class="reviews-slide-item-mob" id="revMob3">
+                  <div class="reviews-slide-item" id="rev3">
                     <div class="rev">
                       <div class="rev-square"></div>
                       <div class="rev-header">
@@ -458,9 +361,9 @@
                   <img src="assets/img/arr-left.png" alt="стрелка">
                 </a>
                 <ul class="reviews-slider-dots">
-                  <li class="dot dot-square dot-active"></li>
-                  <li class="dot dot-square"></li>
-                  <li class="dot dot-mob"></li>
+                  <li class="dot dot-active"></li>
+                  <li class="dot"></li>
+                  <li class="dot"></li>
                 </ul>
                 <a class="revs-arrow-right" onclick="nextSlide()" id="revs-arr-rt">
                   <img src="assets/img/arr-right.png" alt="стрелка">
@@ -473,7 +376,7 @@
       </div>
 
       <!-- Contacts -->
-      <div class="contacts" id="contacts">
+      <div class="contacts scroll" id="contacts">
         <section class="section section-contacts">
           <div class="container">
           <div class="container-inner">
@@ -541,5 +444,6 @@
 
     <script src="assets/js/burger.js"></script>
     <script src="assets/js/sliderRev.js"></script> 
+    <script src="assets/js/scroll.js"></script>     
 </body>
 </html>
