исправлена верстка для мобильных

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                   <h5 class="benefits-list-title">20 лет работы <br>
                       в сфере недвижимости</h5>
                   <p class="benefits-list-text">Накопленный за мою многолетнюю<br> 
-                       практику, опыт позволит быстро<br>
+                       практику опыт позволит быстро<br>
                         и качественно найти именно то,<br>
                         что вам нужно</p>
                   
