добавлен скрипт для навигации

--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
             <a class="logo" href="#intro" id="logo">
               <img src="assets/img/logo.svg" alt="logo">
             </a>
-            <nav class="navside">      
-              <a href="#intro" class="nav-link active"><div class="square-nav"></div>
-                ГЛАВНАЯ</a>
-              <a href="#selection" class="nav-link"><div class="square-nav"></div>БЕСПЛАТНЫЙ ПОДБОР КВАРТИРЫ</a>
-              <a href="#benefits" class="nav-link"><div class="square-nav"></div>ПРЕИМУЩЕСТВА СОТРУДНИЧЕСТВА</a>
-              <a href="#flats" class="nav-link"><div class="square-nav"></div>КВАРТИРЫ В РЕГИОНАХ</a>
-              <a href="#reviews" class="nav-link"><div class="square-nav"></div>ОТЗЫВЫ</a>
-              <a href="#contacts" class="nav-link"><div class="square-nav"></div>КОНТАКТЫ</a>
+            <nav class="nav">
+              <ul class="navside">    
+              <li><a href="#intro" class="nav-link active"><div class="square-nav"></div>
+                ГЛАВНАЯ</a> </li>
+              <li><a href="#selection" class="nav-link"><div class="square-nav"></div>БЕСПЛАТНЫЙ ПОДБОР КВАРТИРЫ</a></li>
+              <li><a href="#benefits" class="nav-link"><div class="square-nav"></div>ПРЕИМУЩЕСТВА СОТРУДНИЧЕСТВА</a></li>
+              <li><a href="#flats" class="nav-link"><div class="square-nav"></div>КВАРТИРЫ В РЕГИОНАХ</a></li>
+              <li><a href="#reviews" class="nav-link"><div class="square-nav"></div>ОТЗЫВЫ</a></li>
+              <li><a href="#contacts" class="nav-link"><div class="square-nav"></div>КОНТАКТЫ</a></li>
+              </ul>
             </nav>
             <address class="header-address">
               <a href="#" class="header-tel">+7(XXX)XXX-XX-XX</a>
