--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
                       разобраться<br> в&nbsp;которых самостоятельно
                       бывает непросто:</p>
                       <ul class="selection-list">
-                        <li class="selection-point">  как правильно выбирать застройщика?
+                        <li class="selection-point">  Как правильно выбирать застройщика?
                         </li>
-                        <li class="selection-point">  какие материалы используются при&nbsp;строительстве дома?</li>
-                        <li class="selection-point">  что делать, если банк не одобрит ипотеку?
+                        <li class="selection-point">  Какие материалы используются при&nbsp;строительстве дома?</li>
+                        <li class="selection-point">  Что делать, если банк не одобрит ипотеку?
                         </li>
                       </ul>
                   </div> <!-- /.selection-info-text-->
